--- a/index.html
+++ b/index.html
@@ -8,15 +8,35 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Galada&family=Lora:wght@400;700&family=Maven+Pro:wght@400;500&family=Montserrat:wght@300;400;500;600&family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:wght@300;400&family=Raleway:wght@400;500&family=Shizuru&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <nav>
+      <h1 class="logo">Skincare.</h1>
+    </nav>
+    <section class="hero-section">
+      <img src="./hero.jpg" alt="" class="hero-img" />
+      <div class="cta">
+        <div class="cta-text">
+          <h2><span class="cta1">One</span></h2>
+          <h2><span class="cta2">stop</span></h2>
+          <h2><span class="cta3">Shop</span></h2>
+        </div>
+        <div class="cta-text">
+          <h2><span class="cta4">to</span></h2>
+          <h2><span class="cta5">perfect</span></h2>
+          <h2><span class="cta6">skin.</span></h2>
+        </div>
+        <button class="cta-btn">Explore</button>
+      </div>
+    </section>
+
     <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"
-      integrity="sha512-eP6ippJojIKXKO8EPLtsUMS+/sAGHGo1UN/38swqZa1ypfcD4I0V/ac5G3VzaHfDaklFmQLEs51lhkkVaqg60Q=="
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.2/gsap.min.js"
+      integrity="sha512-kVlGhj2qFy+KBCFuvjBJTGUMxbdqJKs4yK2jh0e0VPhWUPiPC87bzm4THmaaIee3Oj7j6sDpTTgm2EPPiESqBg=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
